# RAG-MCP

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  mcp.json  model_profiles.json  pyproject.toml  render.yaml  requirements.txt  run-inspect.sh  run_http_server.py  run_server.py
data/: sample_document.txt
examples/: mcp_client_config.py
scripts/: test_cv.py  test_openai_hello.py
src/: __init__.py  config.py  rag_manager.py  server.py  tools.py
